--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Lato', sans-serif;
-    padding-top: 110px;
 }
 
 header {
@@ -9,6 +8,7 @@ header {
     top: 0;
     left: 0;
     display: none;
+    z-index: 9999;
 }
 
 .header-desktop {
@@ -53,13 +53,40 @@ header {
     color: gray;
 }
 
+.btn-border {
+    border: 2px #EC5242;
+}
+
+.about {
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact {
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-bottom: 5%;
+}
+
+.submit-bottom {
+    margin-top: 5%;
+}
+
 @media screen and (min-width: 768px) {
+
+    body {
+        padding-top: 110px;
+    }
+
     .header-mobile {
-      display: none;
+        display: none;
+        z-index: 9999;
     }
 
     .header-desktop {
-      display: flex;
-      width: 100%;
+        display: flex;
+        width: 100%;
+        z-index: 9999;
     }
 }
