--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ header {
     font-size: 400%;
     font-weight: bold;
 }
+
 .main p {
     color: gray;
 }
@@ -61,6 +62,15 @@ header {
     padding: 5%;
     display: flex;
     flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #EC5242;
+    padding: 10%;
+}
+
+.about p {
+    color: gray;
 }
 
 .contact {
